[feat]: Work in progress HUs 29-30-31